--- a/ctf-server/docker-compose.yml
+++ b/ctf-server/docker-compose.yml
@@ -1,6 +1,6 @@
-version: '3'
+version: "3"
 services:
-  nginx: 
+  nginx:
     image: nginx:latest
     container_name: nginx_rev
     volumes:
@@ -11,17 +11,43 @@ services:
     ports:
       - 80:80
       - 443:443
+      - 8090:8090
+
+    expose:
+      - "8090"
+
+    links:
+      - ctfd
+      - grafana
+      - influxdb
+      - telegraf
 
   ctfd:
     image: ctfd/ctfd:latest
     container_name: isag_ctfd
     expose:
-      - "8080:8080"
+      - "8000"
 
   grafana:
     image: grafana/grafana:latest
     container_name: monitor_grafana
     expose:
-      - "3000:9999"
-    environment:
-      GF_SERVER_ROOT_URL: monitor.ctf.kmi.tl
+      - "3000"
+
+  influxdb:
+    image: influxdb
+    container_name: influxdb
+    ports:
+      - 8086:8086
+    expose:
+      - "8086"
+    links:
+      - telegraf
+
+  telegraf:
+    image: telegraf
+    container_name: telegraf
+    volumes:
+      - ./telegraf.conf:/etc/telegraf/telegraf.conf
+      - /var/run/docker.sock:/var/run/docker.sock
+    
