--- a/ctf-server/nginx.conf
+++ b/ctf-server/nginx.conf
@@ -33,11 +33,14 @@ http {
     resolver_timeout 2s;
 # Server Blocks
     server {
-        listen 80;
-        listen [::]:80;
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
         server_name ctf.kmi.tl;
+        ssl_certificate /etc/letsencrypt/live/monitor.ctf.kmi.tl/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/monitor.ctf.kmi.tl/privkey.pem;
+        ssl_trusted_certificate /etc/letsencrypt/live/monitor.ctf.kmi.tl/chain.pem;
         location / {
-            proxy_pass http://isag_ctfd:8080;
+            proxy_pass http://isag_ctfd:8000;
             proxy_redirect off;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -45,32 +48,43 @@ http {
             proxy_set_header X-Forwarded-Host $server_name;
         }
     }
-
+    server {
+        listen 80;
+        listen [::]:80;
+        server_name ctf.kmi.tl;
+        location / {
+            return 301 https://ctf.kmi.tl$request_uri;
+        }
+    }
+    server {
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        server_name monitor.ctf.kmi.tl;
+        ssl_certificate /etc/letsencrypt/live/monitor.ctf.kmi.tl/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/monitor.ctf.kmi.tl/privkey.pem;
+        ssl_trusted_certificate /etc/letsencrypt/live/monitor.ctf.kmi.tl/chain.pem;
+        location / {
+            proxy_pass http://monitor_grafana:3000;
+            proxy_redirect off;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Host $server_name;
+        }
+    }
     server {
         listen 80;
         listen [::]:80;
         server_name monitor.ctf.kmi.tl;
         location / {
-            proxy_pass http://monitor_grafana:9999;
-            proxy_redirect off;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Host $server_name;
+            return 301 https://monitor.ctf.kmi.tl$request_uri;
         }
     }
-
-    # server {
-    #     listen 80;
-    #     listen [::]:80;
-    #     server_name ctf.kmi.tl;
-    #     location / {
-    #         proxy_pass http://isag_ctfd:8080;
-    #         proxy_redirect off;
-    #         proxy_set_header Host $host;
-    #         proxy_set_header X-Real-IP $remote_addr;
-    #         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #         proxy_set_header X-Forwarded-Host $server_name;
-    #     }
-    # }
+    server {
+        listen 8090;
+        location /nginx_status {
+            stub_status;
+            access_log off;
+        }
+    }
 }
